# t-embed-si4732-radio

./: .gitattributes  .gitignore  BUILD_JS8CALL_WASM.md  LICENSE  README.md  platformio.ini
data/: index.html
data/css/: style.css
data/js/: app.js  audio.js  cw.js  ft8.js  ft8worker.js  js8call-worker.js  js8call.js  js8call_wasm.js  js8call_wasm_bg.wasm  waterfall.js
js8call-decoder/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
js8call-decoder/src/: decoder-worker.ts  decoder.ts  main.ts
js8call-decoder/wasm/src/: decimate.rs  ldpc.rs  ldpc_matrix.rs  lib.rs  llr.rs  message.rs
js8call-wasm-decoder/: .gitignore  LICENSE  README.md  package.json
js8call-wasm-decoder/tools/: gen_ldpc_matrix.py
js8call-wasm-decoder/wasm/: Cargo.toml
js8call-wasm-decoder/wasm/src/: spectrogram.rs  sync.rs  types.rs
partitions/: app3M_fat9M_16MB.csv  app4M_lfs8M_16MB.csv
scripts/: post_build.py  pre_build.py
src/: main.cpp
src/audio/: AudioCapture.cpp  AudioCapture.h
src/config/: PinConfig.h
src/display/: DisplayManager.cpp  DisplayManager.h
src/dsp/: FFTProcessor.cpp  FFTProcessor.h  SoftSSBDemod.cpp  SoftSSBDemod.h
src/input/: EncoderHandler.cpp  EncoderHandler.h
src/power/: I2CScanner.h  PowerManager.cpp  PowerManager.h
src/radio/: BandConfig.h  RadioController.cpp  RadioController.h  SSBPatch.h
src/web/: WebServer.cpp  WebServer.h  WebSocketHandler.cpp  WebSocketHandler.h
